--- a/HelloWorld/extension.css
+++ b/HelloWorld/extension.css
@@ -3,47 +3,74 @@ body
 {
 	padding:0%;
 	margin:0%;
-	min-width:16em;
+	min-width:30em;
+   
 }
-
+#logo{
+    margin: 2% 2%;
+}
+#logo img{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+}
+.option{
+    display:flex;
+    justify-content:center;
+}
+.btn-options{
+    display:inline-block;
+    width: 40%;
+    text-align:center;
+    padding:3% 1%;
+    font-family:sans-serif;
+    margin:3% 2%;
+    border:2px solid #dd2233;
+    border-radius:5px;
+    font-size:16px;
+    color:#dd2233;
+}
+.btn-options:hover{
+    background-color:#dd2233;
+    color:#fefefe;
+    transition:background-color 0.6s;
+    cursor:pointer;
+}
 input{
 	margin:1% 3%;
 	font-family:Sans-serif;
-	
-	
 }
+
 span{
 font-family:Sans-serif;
 	font-weight:bold;
 	margin:1% 3%;
 }
-#submit{
-margin:2% 3%;
-max-width:30%;
-padding:2% 8%;
-
-background-color: white;
-color:#1AAB8A;
-border:2px solid #1AAB8A;
-border-radius:1px;
-transition:border 1s;
-transition:background-color 1s;
-font-size:13px;
-cursor:pointer;
+#submit {
+    margin: 2% 3%;
+    max-width: 30%;
+    padding: 2% 8%;
+    background-color: white;
+    color: #ff7417;
+    border: 2px solid #ff7417;
+    border-radius: 1px;
+    transition: border 1s;
+    transition: background-color 1s;
+    font-size: 13px;
+    cursor: pointer;
 }
-#submit:hover
-{
-border:2px solid #3e8474;
-transition:border 0.6s;
-background-color:#1AAB8A;
-color:white;
-transition:background-color 1s;
-}
+    #submit:hover {
+        border: 2px solid #f26d1c;
+        transition: border 0.6s;
+        background-color: #ff7417;
+        color: white;
+        transition: background-color 1s;
+    }
 #footer
 {
 	margin:0%;
 	width:100%;
-	background-color:#ff7417;
+	background-color:#dd2233;
 	text-align:center;
 	font-size:1.2em;
 	
@@ -51,7 +78,7 @@ transition:background-color 1s;
 #footer i
 {
 	margin: 2% 3%;
-	color:black;
+	color:rgba(254,254,254,0.7);
 }
 #footer a{
 text-decoration:none;
