--- a/HelloWorld/extension.css
+++ b/HelloWorld/extension.css
@@ -1,15 +1,15 @@
 
-body
-{
-	padding:0%;
-	margin:0%;
-	min-width:30em;
-   
+body {
+    padding: 0%;
+    margin: 0%;
+    min-width: 30em;
+    background-color: #F0F0F0;
 }
 #logo{
     margin: 2% 2%;
 }
 #logo img{
+    
     display:block;
     margin-left:auto;
     margin-right:auto;
@@ -29,6 +29,7 @@ body
     border-radius:5px;
     font-size:16px;
     color:#dd2233;
+    background-color:#fefefe;
 }
 .btn-options:hover{
     background-color:#dd2233;
@@ -36,15 +37,24 @@ body
     transition:background-color 0.6s;
     cursor:pointer;
 }
+.active{
+    background-color:#dd2233;
+    color:#fefefe;
+}
 input{
 	margin:1% 3%;
 	font-family:Sans-serif;
+    width:90%;
+    padding:3% 0%;;
+    background-color:#fefefe;
+    border-radius:4px;
 }
 
-span{
+form span{
 font-family:Sans-serif;
-	font-weight:bold;
+	
 	margin:1% 3%;
+    font-size:14px;
 }
 #submit {
     margin: 2% 3%;
