--- a/HelloWorld/extension.css
+++ b/HelloWorld/extension.css
@@ -45,15 +45,18 @@ input{
 	margin:2% 3.5%;
 	font-family:Sans-serif;
     width:92%;
-    padding:4% 0%;;
+    padding:4% 2%;;
     background-color:#fefefe;
     border-radius:4px;
+    font-family:'Aleo', sans-serif,Arial;
+   
 }
 form span {
-    font-family: Sans-serif;
+    font-family:'Aleo' , sans-serif,Arial;
     margin: 2.5% 3.5%;
     font-size: 13px;
     color: #404040;
+    font-weight: 600;
 }
 .OTP{
     display:flex;
