--- a/HelloWorld/extension.css
+++ b/HelloWorld/extension.css
@@ -42,20 +42,30 @@ body {
     color:#fefefe;
 }
 input{
+    outline:none;
 	margin:2% 3.5%;
 	font-family:Sans-serif;
-    width:92%;
+    width:90%;
     padding:4% 2%;;
     background-color:#fefefe;
     border-radius:4px;
     font-family:'Aleo', sans-serif,Arial;
+    color:#555;
    
+}
+#input::placeholder{
+    text-indent:0%;
+    transition:text-indent 0.3s ease-in-out;
+}
+input:focus::placeholder {
+    transition: text-indent 0.3s ease-in-out;
+    text-indent: 120%;
 }
 form span {
     font-family:'Aleo' , sans-serif,Arial;
     margin: 2.5% 3.5%;
     font-size: 13px;
-    color: #404040;
+    color: #555;
     font-weight: 600;
 }
 .OTP{
@@ -83,20 +93,35 @@ form span {
     cursor: pointer;
     text-align:center;
 }
-    #submit:hover {
+#submit:hover {
         background-color: #fefefe;
         color: #dd2233;
         box-shadow:2px 2px 5px 1px gray;
         transition: background-color 0.6s;
-    }
-#footer
-{
-	margin:0%;
-	width:100%;
-	background-color:#dd2233;
-	text-align:center;
-	font-size:1.2em;
-	
+}
+
+.create-account{
+    text-align:center;
+    align-content:center;
+    align-items:center;
+}
+.create-account #new-account{
+    
+    padding:2% 0%;
+    text-align:center;
+    font-family:'Aleo', sans-serif,Arial;
+}
+.create-account #new-account a {
+        text-decoration: none;
+        font-size: 14px;
+        color: #555;
+ }
+#footer {
+        margin: 0%;
+        width: 100%;
+        background-color: #dd2233;
+        text-align: center;
+        font-size: 1.2em;
 }
 #footer i
 {
@@ -107,8 +132,5 @@ form span {
 text-decoration:none;
 }
 h3{
-    text-align: center;
-}
-#first{
     text-align: center;
 }
