--- a/HelloWorld/extension.css
+++ b/HelloWorld/extension.css
@@ -99,7 +99,19 @@ form span {
         box-shadow:2px 2px 5px 1px gray;
         transition: background-color 0.6s;
 }
+#count_down{
 
+    text-align: center;
+    color: #dd2233;
+    font-family: 'Aleo',sans-serif;
+    padding-top: 2%;
+    font-size: 14px;
+    font-weight: bold;
+}
+#bar_count{
+    background-color: #dd2233;
+    width: 0%;
+}
 .create-account{
     text-align:center;
     align-content:center;
